<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FacebookDemoApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="error_string">Error</string>
    
    <string name="name">Name : </string>
    <string name="email">Email-Id : </string>
    <string name="dob">DOB : </string>
    <string name="gender">Gender : </string>
    <string name="address">Address : </string>
    <string name="bio">Bio : </string>
    

</resources>